Re-structure, add new API endpoints
